Lmichalik fix resizing (#90)
* Fix grid styles

* fix resizing

* update css styles

* add hotfix for horizontal scrollbar on homepage (compact version)

* update minified css & js

* add field columnMinWidth

---------

--- a/packages/core/src/scss/_header.scss
+++ b/packages/core/src/scss/_header.scss
@@ -20,6 +20,10 @@
 }
 
 .#{$prefix}header-sorter {
+  width: 18px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
   margin-left: var(--#{$prefix}header-sorter-margin-left);
   display: flex;
 
@@ -54,6 +58,7 @@
       height: 1rem;
       width: 1rem;
       opacity: 0;
+
       &:hover {
         color: var(--#{$prefix}header-sorter-arrow-sorted-color);
       }
@@ -73,6 +78,7 @@
     padding: var(--#{$prefix}header-filter-input-padding);
     height: var(--#{$prefix}header-filter-input-height);
     background: var(--#{$prefix}header-filter-input-bg);
+
     &:focus {
       outline: var(--#{$prefix}header-filter-input-border);
     }
@@ -91,6 +97,7 @@
   height: 100%;
   padding-right: var(--#{$prefix}header-resizer-padding-right);
   width: var(--#{$prefix}header-resizer-width);
+
   &:after {
     position: absolute;
     display: block;
@@ -146,8 +153,12 @@
   font-weight: var(--#{$prefix}header-cell-font-weight);
   height: inherit;
   border-bottom: var(--#{$prefix}header-cell-border);
+
   .#{$prefix}header-cell-value {
-    display: flex;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: flex; // INFO: we left it after merging conflicts; in case of any problems look here (#88, #90) 
     pointer-events: none;
     align-items: center;
   }
@@ -160,6 +171,7 @@
     background-color: var(--#{$prefix}header-cell-active-bg);
     border-bottom: none;
     z-index: 2;
+
     & > * {
       pointer-events: none;
     }
@@ -189,12 +201,14 @@
 }
 
 .#{$prefix}header-value-and-sorter {
+  flex: 1;
+  overflow: hidden;
   display: flex;
 }
 
 .#{$prefix}header-menu-toggler {
   display: none;
-  width: 16px;
+  width: 18px;
   border: none;
   background: none;
   cursor: pointer;
